# Bookstore

./: .gitignore  README.md  output.md
client-go/: Makefile  go.mod  main.go
client-py/: bookstore_pb2.py  bookstore_pb2.pyi  bookstore_pb2_grpc.py  main.py  requirements.txt
proto/: bookstore.proto  helloworld.proto
server/: Cargo.toml  build.rs
server/src/: cmd.rs  db_init.rs  eval.rs  eval_thread.rs  helloworld.rs  log.rs  main.rs  rpc_handler.rs
writeup/: citations.bib  main.tex
writeup/evaluation-results/: figure.ipynb  output-buy-50-100.csv  output-buy-500-10.csv  output-buy-5k-1-sequential.csv  output-buy-var.csv  output-search-50-100.csv  output-search-500-10.csv  output-search-5k-1-sequential.csv  output-search-var.csv
